--- a/views/herbs/herbs.hbs
+++ b/views/herbs/herbs.hbs
@@ -12,5 +12,7 @@
 <div class="add-herbs">
 <p>Don't see something that should be listed?</p>
 <a href="/herbs/add">Add a New Herb</a>
-</div>
+   <p><a href="/welcome">Dashboard</a></p>
+   <p><a href="/logout">Logout</a></p>
 
+</div>
