--- a/views/initial/welcome-page.hbs
+++ b/views/initial/welcome-page.hbs
@@ -18,12 +18,13 @@ in essence this should be the main menu --}}
       <a href="/techniques" class="btn-get-started">Treatments</a>
       <a href="/herbs" class="btn-get-started">Herbal Remedies</a>
       <a href="/profile/{{user._id}}" class="btn-get-started">My Profile</a>
+       <a href="/logoutd" class="btn-get-started">Logout</a>
     </div>
   </section><!-- #hero -->
 
   <main id="main">
 
-
+ 
 </div>
 </body>
 
