--- a/views/techniques/techniques.hbs
+++ b/views/techniques/techniques.hbs
@@ -12,4 +12,6 @@
 <div class="add-herbs">
 <p>Don't see something that should be listed?</p>
 <a href="/techniques/add">Add Alternative Technique</a>
+   <p><a href="/welcome">Dashboard</a></p>
+   <p><a href="/logout">Logout</a></p>
 </div>
