--- a/views/herbs/herbs-detail.hbs
+++ b/views/herbs/herbs-detail.hbs
@@ -65,5 +65,5 @@
   <button type="submit">ADD</button>
 </form>
 
-
-<a href="/welcome">Return</a>
+ <p><a href="/welcome">Dashboard</a></p>
+   <p><a href="/logout">Logout</a></p>
