--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -1,13 +1,12 @@
-<div class="goodbye">
-<h2>Until next time!</h2>
-</div>
 
 
-<p>Thank you for visiting</p>
+    <section id="hero">
+    <div class="hero-container">
+            <h1>Until next time!</h1>
+      <h2>Thank you for joining our community</h2>
+      <a href="/" class="btn-get-started">Home</a>
+      <a href="/login" class="btn-get-started">Login</a>
+    
+    </div>
+  </section><!-- #hero -->
 
-
-<div class="exit-footer">
-<a href="/"> Home </a>
-<br>
-<a href="/login"> Log In</a>
-</div>
