--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,23 +1,74 @@
 <h2>QiOptimizer Profile</h2>
 <br>
 <br>
-<p>See you profile's information below</p>
 
+<div id="user-profile-2" class="user-profile">
+		<div class="tabbable">
+			<div class="tab-content no-border padding-24">
+				<div id="home" class="tab-pane in active">
+					<div class="row">
+						<div class="col-xs-12 col-sm-3 center">
+							<span class="profile-picture">
+								<img class="editable img-responsive" alt=" Avatar" id="avatar2" src ="{{user.profilePic}}">
+							</span>
 
-<div class = "profile">
-<img src ="{{user.profilePic}}">
-<p>Name:{{user.name}}</p>
-<p>Email: {{user.email}}</p>
-<p>Username: {{user.username}}</p>
-<p>Location:{{user.location}}</p>
-{{!-- find way for user to store what herbs and/or treatment user is using so they can keep track of it --}}
-</div>
+							<div class="space space-4"></div>
 
+							<a href="#" class="btn btn-sm btn-block btn-success">
+								<i class="ace-icon fa fa-plus-circle bigger-120"></i>
+								<span class="bigger-110">Add as a friend</span>
+							</a>
 
+							<a href="#" class="btn btn-sm btn-block btn-primary">
+								<i class="ace-icon fa fa-envelope-o bigger-110"></i>
+								<span class="bigger-110">Send a message</span>
+							</a>
+						</div><!-- /.col -->
 
-<h4>Currently following these treatments</h4>
+						<div class="col-xs-12 col-sm-9">
+							<h4 class="blue">
+								<span class="middle">{{user.name}}</span>
 
+								<span class="label label-purple arrowed-in-right">
+									<i class="ace-icon fa fa-circle smaller-80 align-middle"></i>
+									online
+								</span>
+							</h4>
 
+							<div class="profile-user-info">
+								<div class="profile-info-row">
+									<div class="profile-info-name">Email: {{user.email}}</div>
+								</div>
+
+								<div class="profile-info-row">
+									<div class="profile-info-name"> <p>Username: {{user.username}}</p></div>
+
+                  		<div class="profile-info-row">
+									<div class="profile-info-name"><p>Location:{{user.location}}</p></div>
+
+									</div>
+								
+												</div>
+
+			
+
+							</div><!-- /.col -->
+					</div><!-- /.row -->
+
+					<div class="space-20"></div>
+
+					<div class="row">
+						<div class="col-xs-12 col-sm-6">
+							<div class="widget-box transparent">
+								<div class="widget-header widget-header-small">
+									<h4 class="widget-title smaller">
+										<i class="ace-icon fa fa-check-square-o bigger-110"></i>
+										Currently following these treatments
+									</h4>
+								</div>
+
+								<div class="widget-body">
+									<div class="widget-main">
 {{#each user.treatments}}
 <div class="user-treatments">
    <span>Name: {{name}}</span>
@@ -27,8 +78,15 @@
 </div>
 {{/each}}
 
-
-<h3>Add it here</h3>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div><!-- /#home -->
+        <h3>Don't see a treatment you are under?</h3>
+        <h3>Add it here</h3>
 <form action="/profile/treatments/add?user_id={{user._id}}" method="post">
   <label for="">Type:</label>
   <input type="text" name="name">
@@ -54,4 +112,4 @@
  <p><a href="/profile/{{user.id}}/delete">Delete your Profile</a></p>
  <br>
  <p><a href="/welcome">Dashboard</a></p>
-
+   <p><a href="/logout">Logout</a></p>
