--- a/views/techniques/techniques-detail.hbs
+++ b/views/techniques/techniques-detail.hbs
@@ -68,4 +68,5 @@
   <button type="submit">ADD</button>
 </form>
 
-<a href="/welcome">Return</a>
+ <p><a href="/welcome">Dashboard</a></p>
+   <p><a href="/logout">Logout</a></p>
